Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <a id="forkme_banner" href="https://github.com/Arodang/valentines">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -34,9 +35,15 @@
         </span>
       </header>
 
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/Arodang/valentines/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/Arodang/valentines/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
 
       <span class="banner-fix"></span>
-<br><br><br><br>
+
 
       <section id="main_content">
         <h1>
@@ -46,6 +53,18 @@
 No, really. You're the best and I love you.
 Sometimes I can't even words, all I can do is <em>AHHHHHHHHHHHHHHHHHHHHHHHHHHH</em> because you're so cute.</p>
       </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/Arodang">Arodang</a> can be found on <a href="https://github.com/Arodang/valentines">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
 
     </div>
 
