--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Valentines Day by Arodang</title>
+    <title>Valentines Day by Dan</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/Arodang/valentines">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/Arodang/valentines"></a>
     <div class="shell">
 
       <header>
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/Arodang/valentines/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/Arodang/valentines/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/Arodang/valentines/zipball/master" class="zip"></a><a href="https://github.com/Arodang/valentines/tarball/master" class="tgz"></a>
         </span>
       </section>
 
