--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/Arodang/valentines"></a>
+    <a href="https://github.com/Arodang/valentines"></a>
     <div class="shell">
 
       <header>
