--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <p>I'm crap at making cards. I think you figured that out. But you're awesome.
 No, really. You're the best and I love you.
 Sometimes I can't even words, all I can do is <em>AHHHHHHHHHHHHHHHHHHHHHHHHHHH</em> because you're so cute.</p>
+<a href="images/SimsValentine.jpg">Now click here for your card! </a>
       </section>
 
       <footer>
